adding till health point controller endpoint